# obsidian-wiki

./: .env.example  AGENTS.md  README.md  pyproject.toml
.agents/skills/: wiki-stage-commit
.claude/skills/: wiki-dedup  wiki-journal
.cursor/skills/: wiki-context-pack  wiki-import
.pi/skills/: vault-skill-factory  wiki-granola
.skills/llm-wiki/: SKILL.md
.skills/wiki-granola/: SKILL.md
.skills/wiki-ingest/: SKILL.md
.skills/wiki-journal/: SKILL.md
.skills/wiki-query/: SKILL.md
.skills/wiki-status/: SKILL.md
obsidian_wiki/: cli.py  mcp_server.py
